tests/snapshots/engine__knd001_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "KND001",
    "message": "Document kind cannot be resolved because the frontmatter is invalid: did not find expected ',' or ']' at line 3 column 1, while parsing a flow sequence at line 2 column 7.",
    "filename": "docs/guide.md",
    "location": {
      "row": 1,
      "column": 1
    },
    "end_location": {
      "row": 3,
      "column": 4
    },
    "byte_range": {
      "start": 0,
      "end": 20
    },
    "fix": null,
    "url": "https://github.com/scarletkc/seiso/blob/v0.1.0/docs/rules/KND001.md",
    "related": [],
    "suggestion": "Correct the YAML frontmatter so its kind declaration can be read."
  }
]
