tests/snapshots/engine__knd002_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "KND002",
    "message": "Unknown document kind \"guide\".",
    "filename": "docs/guide.md",
    "location": {
      "row": 1,
      "column": 1
    },
    "end_location": {
      "row": 3,
      "column": 4
    },
    "byte_range": {
      "start": 0,
      "end": 19
    },
    "fix": null,
    "url": "https://github.com/scarletkc/seiso/blob/v[version]/docs/rules/KND002.md",
    "related": [],
    "suggestion": "Use one of the lowercase kinds readme, howto, reference, runbook, adr, plan, or changelog in frontmatter."
  }
]
