tests/snapshots/engine__lnk001_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "LNK001",
    "message": "Local link target \"missing-reference.md\" does not exist in the workspace.",
    "filename": "docs/guide.md",
    "location": {
      "row": 5,
      "column": 6
    },
    "end_location": {
      "row": 5,
      "column": 57
    },
    "byte_range": {
      "start": 26,
      "end": 77
    },
    "fix": null,
    "url": "https://github.com/scarletkc/seiso/blob/v[version]/docs/rules/LNK001.md",
    "related": [],
    "suggestion": "Update the path or restore the target; paths resolve from this document's directory, or from the workspace root when they start with /, and seiso does not add .md or index.md."
  }
]
