tests/snapshots/engine__ord002_example.snap
---
source: tests/engine.rs
expression: result.diagnostics
---
[
  {
    "code": "ORD002",
    "message": "Troubleshooting or exceptions appear before the main flow.",
    "filename": "docs/guide.md",
    "location": {
      "row": 4,
      "column": 1
    },
    "end_location": {
      "row": 4,
      "column": 19
    },
    "byte_range": {
      "start": 20,
      "end": 38
    },
    "fix": null,
    "url": "https://github.com/scarletkc/seiso/blob/v[version]/docs/rules/ORD002.md",
    "related": [
      {
        "filename": "docs/guide.md",
        "location": {
          "row": 10,
          "column": 1
        },
        "end_location": {
          "row": 10,
          "column": 22
        },
        "byte_range": {
          "start": 93,
          "end": 114
        },
        "message": "The main flow starts here."
      }
    ],
    "suggestion": "Move this section after the main procedure so readers can reach the common path first."
  }
]
